Wed Nov 19 10:07:57 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/prelude.c.tmpl (Prelude#translate): strip VPATH prefix
	  from prelude names, so that srcdir diffrences do not make the
	  generated code diffrent.

Wed Nov 19 07:45:11 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_write): should set the error of
	  GetOverlappedResult()'s, not WriteFile()'s (it's always
	  ERROR_IO_PENDING, of course).

Tue Nov 18 14:16:47 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_record): add information for debug print.

Wed Nov 19 04:49:07 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* debug.c (set_debug_option): need the declaration.

	* debug.c (set_debug_option): use the same macro with the implementation
	  at win32/win32.c.

Wed Nov 19 04:16:24 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (symbol_list): fix the node type of literal symbol list
	  with no interpolation.  [ruby-core:66343]

Wed Nov 19 00:26:15 2014  Tanaka Akira  <akr@fsij.org>

	* tool/update-deps: Sort dependencies.

Wed Nov 19 00:24:18 2014  Tanaka Akira  <akr@fsij.org>

	* enc/encdb.c: Include internal.h.

Tue Nov 18 23:23:45 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h: Gather declarations in non-header files.

Tue Nov 18 23:45:52 2014  Tanaka Akira  <akr@fsij.org>

	* debug.c (SET_WHEN): Don't declare debug variables here.
	  ruby_initial_gc_stress_ptr is changed int* to VALUE* at r41406.

	* internal.h (ruby_initial_gc_stress_ptr): Declared.
	  (ruby_enable_coredump): Ditto.

Tue Nov 18 18:06:43 2014  Tanaka Akira  <akr@fsij.org>

	* include/ruby/io.h (FMODE_WSPLIT): Removed.  The write() system call
	  is not required to split.  It was useful to avoid whole process
	  blocking in Ruby 1.8 but not useful since write() is invoked without
	  GVL.
	  (FMODE_WSPLIT_INITIALIZED): Ditto.

	* io.c (wsplit_p): Removed.
	  (io_writable_length): Removed.
	  (rb_fcntl): Don't update the removed flags.
